# flamelet

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  LICENSE  MIGRATION.md  Makefile  PROVISIONING_VERIFICATION.md  README.md  TAGS_ANALYSIS.md  TAILSCALE_WIREGUARD_OVERLAP_ANALYSIS.md  TESTING.md  flamelet  index.html  install.sh  mkdocs.yml  package-lock.json  pyproject.toml  pytest.ini  run_tests.sh  sitemap.xml
.github/workflows/: ci.yml  release.yml
advanced/: index.html
changelog/: index.html
commands/: index.html
configuration/: index.html
core/: __init__.py  cli.py  config.py  paths.py  runner.py
core/operations/: __init__.py  autossh.py  bastille.py  bhyve.py  debian_network.py  dnsmasq.py  docker.py  files.py  jails.py  k3s.py  monit.py  nginx.py  node_exporter.py  opensmtpd.py  openwrt_firewall.py  package_update.py  packages.py  pf.py  pf_gateway_routing.py  postgresql.py  prometheus.py  proxmox.py  registry.py  resolv_conf.py  services.py  static_routes.py  storage.py  sudo.py  sysctl.py  tailscale.py  unbound.py  users.py  virtualization.py  wireguard.py
core/tasks/: __init__.py  loader.py
core/web/: __init__.py  __main__.py  app.py  db.py  executor.py
docs/: Makefile  PROVISIONING_VERIFICATION.md  TAILSCALE_GATEWAY_ROUTING.md  advanced.md  changelog.md  commands.md  configuration.md  index.md  usage.md
examples/: README.md
search/: search_index.json
share/flamelet/: checks.bash  debug.bash  flamelet.bash  misc.bash  (+1 more)
tenants/: __init__.py
tests/: __init__.py  conftest.py  test_config_generation.py  test_core_users.py  test_integration.py  test_inventory.py  test_operations.py  test_sudo.py  test_tenant_integration.py  verify_provisioning.py
tools/: install.sh
usage/: index.html
web/: index.html  package-lock.json  package.json  vite.config.js
(+38 files in other folders)
