[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyinfra-framework"
version = "0.1.0"
description = "Multi-tenant infrastructure automation framework using pyinfra"
authors = [{name = "Flamelet Contributors"}]
requires-python = ">=3.10"
dependencies = ["pyinfra>=3.3"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: requires SSH to live hosts (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
